# FinAI

./: .gitignore  INSTALL_MT5.md  README.md  README_MT5.md  architecture.html  package.json  pnpm-lock.yaml  requirements.txt  requirements_mt5.txt  start_all.py  start_mt5.py  test_akshare.py  workflow.html
backend/: example_astock_trading.py  example_futu_trading.py  example_ibkr_trading.py  example_mt5_trading.py  main.py  main_ibkr.py  pyproject.toml  setup_futu.py  setup_ibkr.py  setup_mt5.py  setup_ths.py  test_astock.py  test_mt5_connection.py
backend/api/: account_routes.py  astock_routes.py  config_routes.py  market_data_routes.py  mt5_ai_routes.py  mt5_routes.py  order_routes.py  ws.py
backend/database/: models.py
backend/schemas/: order.py  position.py
backend/services/: ai_decision_service.py  asset_calculator.py  asset_curve_calculator.py  auto_trader.py  futu_market_data.py  futu_order_executor.py  hyperliquid_market_data.py  ibkr_market_data.py  ibkr_order_executor.py  market_data.py  mt5_ai_trader.py  mt5_market_data.py  mt5_order_executor.py  order_executor_astock.py  order_executor_leverage.py  order_matching.py  scheduler.py  startup.py  ths_market_data.py  trading_commands.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
